/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.animalexample;

/**
 *
 * @author pekka
 */
public class AnimalExample {

    public static void main(String[] args) {
        Cat objectCat=new Cat();
        objectCat.SayName();
    }
}
