/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.animalexample;

/**
 *
 * @author pekka
 */
public class Cat extends Animal implements IAnimal {

    @Override
    public void SayName() {
        System.out.println("Olen kissa");
    }
    
}
