/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.animalexample;

/**
 *
 * @author pekka
 */
public interface IAnimal {
    public void SayName();
}
